2.1.1.4 update
-Added Money Chest
* Money Chest Exchange Upgrade
* Money Chest Magnet Upgrade
* Money Chest Security Upgrade

-Update Items now clear upgrade data when crouching & using.

-ATM "commands" now use 'exchange' terminology instead of 'convert'.
-Loot Config default option fix & rework.